@@ -1,3 +1,8 @@
+2004-07-08 Magnus Hagdorn
+ * changed where configuration file is read in so it's only read once
+   (eis_ela.f90, eis_forcing.f90, eis_glide.f90, eis_slc.f90, eis_temp.f90, glide.f90, 
+    glide_setup.f90, ncdf_params.f90.in, simple_forcing.f90, simple_glide.f90)
+
 2004-07-01 Magnus Hagdorn
  * handle input relaxed topo (glide.f90, glide_setup.f90, glide_types.f90)
  * ncdf_vars.def: fixed sign of isostatic sea level 
